--- a/one.html
+++ b/one.html
@@ -148,9 +148,9 @@
     <div class="heading1" id="heading1" style="text-align: center;margin-left: 20%; background-color: blue;color: yellow;width: auto;"><h1 >SURYA MOVIES</h1></div>
     
     <div id="movsel" style="display: flex; margin-left: 30%; gap: 13px;">
-       <a class="" href=""> <div class="inn" style="background-color: #01f822;" >Bollywood</div></a>
-       <a class="" href=""> <div class="inn" style=" background-color: #bde605;" >SouthMovies</div></a>
-       <a class="" href=""> <div class="inn" style="background-color: cyan; ">Hollywood</div></a>
+       <a class="" href="bollywood.html"> <div class="inn" style="background-color: #01f822;" >Bollywood</div></a>
+       <a class="" href="south.html"> <div class="inn" style=" background-color: #bde605;" >SouthMovies</div></a>
+       <a class="" href="hollywood.html"> <div class="inn" style="background-color: cyan; ">Hollywood</div></a>
         <!-- <div></div> -->
     </div><br>
 
